Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -240,14 +240,14 @@ Każda struktura danych - lista, tupla, dict czy set - posiada określony zakres
 ```python
 human_x_coordinates = [14.34, -3.89, -65.23, 0.84]
 ```
-**`len`**
+1. **`len`**
 ```python
 len(human_x_coordinates)  # zwraca długość listy
 ```
 4
 
 ---
-**`append`**
+2. **`append`**
 ```python
 human_x_coordinates.append(2.45)  # dodaje nowy element na końcu listy
 print(human_x_coordinates)
@@ -255,7 +255,7 @@ print(human_x_coordinates)
 [14.34, -3.89, -65.23, 0.84, 2.45]
 
 ---
-**`split`**
+3. **`split`**
 ```python
 experience_rule = "każdy zabity zombie daje ci jeden punkt doświadczenia"
 
@@ -269,7 +269,7 @@ experience_rule.split("a")  # ... lub dowolnym innym ciągu znaków
 ['k', 'żdy z', 'bity zombie d', 'je ci jeden punkt doświ', 'dczeni', '']
 
 ---
-**`join`**
+4. **`join`**
 ```python
 # łączy elementy listy wstawiając pomiędzy nie dowolny ciąg znaków
 " ".join(["Każdy", "zabity", "zombie", "daje", "ci", "jeden", "punkt", "doświadczenia"])
@@ -277,14 +277,19 @@ experience_rule.split("a")  # ... lub dowolnym innym ciągu znaków
 'Każdy zabity zombie daje ci jeden punkt doświadczenia'
 
 ---
-**`sorted`**
+5. **`sorted`**
 ```python
 sorted(human_x_coordinates)  # sortuje elementy listy rosnąco
 ```
 [-65.23, -3.89, 0.84, 2.45, 14.34]
 
+```python
+sorted(human_x_coordinates, reverse=True)  # sortuje elementy listy rosnąco
+```
+[14.34, 2.45, 0.84, -3.89, -65.23]
+
 ---
-**`extend`**
+6. **`extend`**
 ```python
 human_x_coordinates.extend([1, 2, 3])  # rozszerza listę o elementy innej listy
 print(human_x_coordinates)
@@ -292,14 +297,14 @@ print(human_x_coordinates)
 [14.34, -3.89, -65.23, 0.84, 1, 2, 3]
 
 ---
-**`index`**
+7. **`index`**
 ```python
 human_x_coordinates.index(14.34)  # zwraca indeks podanego elementu
 ```
 0
 
 ---
-**`insert`**
+8. **`insert`**
 ```python
 human_x_coordinates.insert(2, 100)  # wstawia nowy element na określonej pozycji
 print(human_x_coordinates)
@@ -307,7 +312,7 @@ print(human_x_coordinates)
 [14.34, -3.89, 100, -65.23, 0.84, 2.45, 1, 2, 3]
 
 ---
-**`pop`**
+9. **`pop`**
 ```python
 human_x_coordinates.pop()  # usuwa ostatni element z listy i zwraca go
 ```
@@ -324,7 +329,7 @@ print(human_x_coordinates)
 [14.34, 100, -65.23, 0.84, 2.45, 1, 2]
 
 ---
-**`count`**
+10. **`count`**
 ```python
 human_x_coordinates.count(100)  # zlicza ile razy w liście wystąpiła podana wartość
 ```
@@ -335,19 +340,19 @@ human_x_coordinates.count(100)  # zlicza ile razy w liście wystąpiła podana w
 ```python
 x_y_coordinates = (14.34, 3.52)
 ```
-**`len`**
+1. **`len`**
 ```python
 len(x_y_coordinates)  # zwraca długość tupli
 ```
 2
 
-**`index`**
+2. **`index`**
 ```python
 x_y_coordinates.index(14.34)  # zwraca indeks podanego elementu
 ```
 0
 
-**`count`**
+3. **`count`**
 ```python
 x_y_coordinates.count(14.34)  # zlicza ile razy w tupli wystąpiła podana wartość
 ```
@@ -358,7 +363,15 @@ x_y_coordinates.count(14.34)  # zlicza ile razy w tupli wystąpiła podana warto
 human_character = {"class": "Human"}
 ```
 
-**`update`**
+1. **`len`**
+```python
+len(human_character)
+```
+1
+
+---
+
+2. **`update`**
 ```python
 # dodaje nową parę (pary) klucz-wartość
 human_character["x"] = 2.1
@@ -380,7 +393,7 @@ print(human_character)
 ```
 {'class': 'Human', 'x': 100, 'y': 5, 'velocity': 10.1, 'experience': 1}
 
-**`get`**
+3. **`get`**
 ```python
 # wyciąga wartość, która znajduje się pod danym kluczem
 human_character["class"]  # 'Human'
@@ -389,7 +402,7 @@ human_character.get("power")  # None
 human_character.get("power", 0)  # 0
 ```
 
-**`pop`**
+4. **`pop`**
 ```python
 human_character.pop("x")  # usuwa podany klucz wraz z wartością pod nim
 ```
@@ -400,7 +413,7 @@ print(human_character)  # ze słownika został usunięty klucz 'x'
 {'class': 'Human', 'y': 5, 'velocity': 3.5, 'experience': 0}
 
 ```python
-human_character.popitem()  # usuwa ostatnio dodaną parę klucz-wartość
+human_character.popitem()  # usuwa i zwraca ostatnio dodaną parę klucz-wartość
 ```
 ('experience', 1)
 
@@ -409,8 +422,9 @@ print(human_character)
 ```
 {'class': 'Human', 'y': 5, 'velocity': 10.1}
 
-**`fromkeys()`**
+5. **`fromkeys()`**
 ```python
+# tworzy słownik z podanych kluczy i wartości None
 dict().fromkeys(["class", "x", "y", "velocity", "experience", "power"])
 ```
 {'class': None, 'x': None, 'y': None, 'velocity': None, 'experience': None, 'power': None}
@@ -421,16 +435,22 @@ dict().fromkeys(["class", "x", "y", "velocity", "experience", "power"])
 allowed_classes = {"human", "zombie"}
 ```
 
-**`add`**
+1. **`len`**
 ```python
-allowed_classes.add("werewolf")
+len(allowed_classes)
+```
+2
+
+2. **`add`**
+```python
+allowed_classes.add("werewolf")  # dodaje element do zbioru
 print(allowed_classes)
 ```
 {'human', 'werewolf', 'zombie'}
 
-**`pop`**
+3. **`pop`**
 ```python
-allowed_classes.pop()
+allowed_classes.pop()  # usuwa i zwraca "ostatni" element zbioru
 ```
 'zombie'
 
@@ -439,13 +459,57 @@ print(allowed_classes)
 ```
 {'human', 'werewolf'}
 
-**`remove`**
+4. **`remove`**
 ```python
-allowed_classes.remove("human")
+allowed_classes.remove("human")  # usuwa dany element ze zbioru
 print(allowed_classes)
 ```
 {'werewolf'}
 
+#### 3.5.5 Operacje matematyczne
+Przykładowe operacje matematyczne, które możemy wykonać na listach oraz tuplach
+
+1. **`min`, `max`**
+```python
+min(human_x_coordinates)  # zwraca minimalną wartość z listy/tupli
+```
+-65.23
+
+```python
+max(human_x_coordinates)  # zwraca maksymalną wartość z listy/tupli
+```
+100
+
+2. **`sum`**
+```python
+sum(human_x_coordinates)  # zwraca sumę elementów w liście/tupli
+```
+55.4
+
+```python
+# możemy policzyć też średnią arytmetyczną
+sum(human_x_coordinates) / len(human_x_coordinates) 
+```
+7.914285...
+
+
+3. **`any`, `all`**
+Sprawdza czy którykolwiek (*any*) lub wszystkie (*all*) elementy listy/tupli są niezerowe, to znaczy po zrzutowaniu na *bool* dają wartość *True*
+```python
+humans_infection_status = [True, False, False, True, False]
+any(humans_infection_status)
+```
+True
+
+```python
+all(humans_infection_status)
+```
+False
+
+**Operacje na strukturach danych - podsumowanie:**
+- Każda ze struktur danych posiada zbiór metod, które możemy stosować na obiektach ich typu. Służą one m.in. do takich operacji jak dodawanie nowych elementów, usuwanie ich czy wyciąganie wartości pod danym kluczem
+- Na listach oraz tuplach możemy stosować również szereg funkcji matematycznych, m.in. `min`, `max`, `sum`, ...
+- Funkcje `any` oraz `all` rzutują elementy listy/tupli na typ `bool` po czym sprawdzają czy którykolwiek lub wszystkie elementy mają wartość *True*
 
 ---
 ---
