Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -284,7 +284,7 @@ sorted(human_x_coordinates)  # sortuje elementy listy rosnąco
 [-65.23, -3.89, 0.84, 2.45, 14.34]
 
 ```python
-sorted(human_x_coordinates, reverse=True)  # sortuje elementy listy rosnąco
+sorted(human_x_coordinates, reverse=True)  # sortuje elementy listy malejąco
 ```
 [14.34, 2.45, 0.84, -3.89, -65.23]
 
@@ -335,6 +335,7 @@ human_x_coordinates.count(100)  # zlicza ile razy w liście wystąpiła podana w
 ```
 1
 
+---
 
 #### 3.5.2 `tuple`
 ```python
@@ -346,17 +347,23 @@ len(x_y_coordinates)  # zwraca długość tupli
 ```
 2
 
+---
+
 2. **`index`**
 ```python
 x_y_coordinates.index(14.34)  # zwraca indeks podanego elementu
 ```
 0
 
+---
+
 3. **`count`**
 ```python
 x_y_coordinates.count(14.34)  # zlicza ile razy w tupli wystąpiła podana wartość
 ```
 1
+
+---
 
 #### 3.5.3 `dict`
 ```python
@@ -393,6 +400,8 @@ print(human_character)
 ```
 {'class': 'Human', 'x': 100, 'y': 5, 'velocity': 10.1, 'experience': 1}
 
+---
+
 3. **`get`**
 ```python
 # wyciąga wartość, która znajduje się pod danym kluczem
@@ -422,6 +431,7 @@ print(human_character)
 ```
 {'class': 'Human', 'y': 5, 'velocity': 10.1}
 
+---
 5. **`fromkeys()`**
 ```python
 # tworzy słownik z podanych kluczy i wartości None
@@ -429,7 +439,7 @@ dict().fromkeys(["class", "x", "y", "velocity", "experience", "power"])
 ```
 {'class': None, 'x': None, 'y': None, 'velocity': None, 'experience': None, 'power': None}
 
-
+---
 #### 3.5.4 `set`
 ```python
 allowed_classes = {"human", "zombie"}
@@ -441,6 +451,8 @@ len(allowed_classes)
 ```
 2
 
+---
+
 2. **`add`**
 ```python
 allowed_classes.add("werewolf")  # dodaje element do zbioru
@@ -448,6 +460,7 @@ print(allowed_classes)
 ```
 {'human', 'werewolf', 'zombie'}
 
+---
 3. **`pop`**
 ```python
 allowed_classes.pop()  # usuwa i zwraca "ostatni" element zbioru
@@ -459,6 +472,7 @@ print(allowed_classes)
 ```
 {'human', 'werewolf'}
 
+---
 4. **`remove`**
 ```python
 allowed_classes.remove("human")  # usuwa dany element ze zbioru
@@ -466,6 +480,7 @@ print(allowed_classes)
 ```
 {'werewolf'}
 
+---
 #### 3.5.5 Operacje matematyczne
 Przykładowe operacje matematyczne, które możemy wykonać na listach oraz tuplach
 
@@ -480,19 +495,22 @@ max(human_x_coordinates)  # zwraca maksymalną wartość z listy/tupli
 ```
 100
 
+---
+
 2. **`sum`**
 ```python
 sum(human_x_coordinates)  # zwraca sumę elementów w liście/tupli
 ```
 55.4
 
+---
 ```python
 # możemy policzyć też średnią arytmetyczną
 sum(human_x_coordinates) / len(human_x_coordinates) 
 ```
 7.914285...
 
-
+---
 3. **`any`, `all`**
 Sprawdza czy którykolwiek (*any*) lub wszystkie (*all*) elementy listy/tupli są niezerowe, to znaczy po zrzutowaniu na *bool* dają wartość *True*
 ```python
@@ -506,6 +524,7 @@ all(humans_infection_status)
 ```
 False
 
+---
 **Operacje na strukturach danych - podsumowanie:**
 - Każda ze struktur danych posiada zbiór metod, które możemy stosować na obiektach ich typu. Służą one m.in. do takich operacji jak dodawanie nowych elementów, usuwanie ich czy wyciąganie wartości pod danym kluczem
 - Na listach oraz tuplach możemy stosować również szereg funkcji matematycznych, m.in. `min`, `max`, `sum`, ...
