Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -562,7 +562,7 @@ simple_list[-2]
 8
 
 ---
-Możliwe jest również wyciąganie przedziałów podając początek (*start*) i/lub koniec (*stop*) a także wyciąganie co któregoś elementu za pomocą kroku (*step*). Działa to według poniższego schematu:
+Możliwe jest także wyciąganie przedziałów podając początek (*start*) i/lub koniec (*stop*) a także wyciąganie co któregoś elementu za pomocą kroku (*step*). Działa to według poniższego schematu:
 ```
 a[start:stop]  
 a[start:]      
@@ -630,26 +630,27 @@ Od początku do elementu o indeksie 4. Wartość *step* nie została podana.
 simple_list[::2]
 ```
 [0, 2, 4, 6, 8]
-Od początku do końca co drugi elementu
+Od początku do końca co drugi element.
 
 ---
 ```python
 simple_list[::-1]
 ```
 [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
-Od początku do końca co 1 ale idąc wstecz (ujemny *step*)
+Od początku do końca co 1 ale idąc wstecz (ujemny *step*).
 
 ---
 ```python
 simple_list[::-2]
 ```
 [9, 7, 5, 3, 1]
-Od początku do końca co 2 ale idąc wstecz
+Od początku do końca co 2 ale idąc wstecz.
 
 ---
 **Slicing - podsumowanie:**
 - Aby wyciągnąć z listy/tupli pojedynczy element podajemy jego indeks w nawiasach kwadratowych
 - Numeracja elementów zaczyna się od 0
+- Ujemne indeksy oznaczają pozycję liczoną od końca
 - Aby wyciągnąć zakres używając *start*, *stop* i *step* używamy notacji z dwukropkami, tzn. dla listy a: a[start:stop:step]. Nie musimy podawać wszystkich trzech znaczników jeśli odpowiednio użyjemy dwukropków
 - Ujemny *step* oznacza odwrotną kolejność wyciąganych elementów
 ---
