Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -226,9 +226,14 @@ unique_items_list = list(set(list_with_duplicates))
 `unique_items_list` będzie listą o elementach: `['zombie', 'human']`, natomiast samo `set(list_with_duplicates)` będzie setem o takich elementach.
 
 ---
+Set może składać się tylko z obiektów hashowalnych. Więcej informacji o hashowalności znajdziesz [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|tutaj]].
+
+---
 **`set` - podsumowanie:**
 - `set` to struktura danych przechowująca zbiór unikalnych wartości
 - Kolejność elementów w zbiorze nie ma znaczenia. Po jej zamianie mamy do czynienia z dokładnie tym samym zbiorem
+- `set` może zostać użyty do wyznaczenia unikalnych elementów w liście/tupli
+- `set` nie może przechowywać obiektów hashowalnych
 ---
 ---
 ---
@@ -658,7 +663,70 @@ Od początku do końca co 2 ale idąc wstecz.
 ---
 &nbsp;
 ### 3.7 Zagnieżdżone struktury
+Struktury danych mogą zawierać w sobie inne struktury. Przykładowo elementami listy czy tupli mogą być słowniki, a pod kluczem słownika może znajdować się lista czy tupla. W ogólności możliwe jest tworzenie dowolnie złożonych, zagnieżdżonych struktur, których elementami będą listy, tuple, słowniki i sety. Często wykorzystuje się to do przechowywania danych o określonej strukturze. Poniżej znajduje się przykład listy słowników:
 
+```python
+list_of_zombies = [
+    {
+        "class": "Zombie",
+        "x": 1,
+        "y": 2
+    },
+    
+    {
+        "class": "Zombie",
+        "x": -1.1,
+        "y": 13.2
+    },
+    
+    {
+        "class": "Zombie",
+        "x": -4,
+        "y": 12
+    }
+]
+```
+
+Aby wyciągnąć z tej struktury współrzędną x położenia zombie o indeksie 1 należy użyć poniższej notacji:
+```python
+list_of_zombies[1]["x"]
+```
+
+Najpierw wyciągamy element o indeksie 1 a następnie wartość pod kluczem "x"
+
+---
+Kolejny przykład to lista współrzędnych w kolejnych krokach czasowych, czyli lista tupli:
+```python
+coordinates_in_time_steps = [(1, 4.3), (-3.1, 9.), (5.63, 3.4)]
+```
+
+---
+Możemy dodać kolejny poziom zagnieżdżenia - poniżej znajduje się konfiguracja symulacji, czyli struktura, w której przechowujemy ustawienia początkowe. Jest to słownik, który pod niektórymi kluczami ma listy, które z kolei składają się z tupli:
+```python
+simulation_config = {
+    "number_of_humans": 4,
+    "number_of_zombies": 3,
+    "map_size": (300, 500),
+    "humans_start_positions": [(1, 1), (3, 2), (5, -3), (0, 4)],
+    "zombies_start_positions": [(2, 1), (3, 12), (1, 0)],
+}
+```
+
+Aby wyciągnąć listę początkowych położeń ludzi posługujemy się zapisem:
+```python
+simulation_config["humans_start_positions"]
+```
+
+natomiast żeby wyciągnąć współrzędną x ostatniego człowieka:
+```python
+simulation_config["humans_start_positions"][-1][0]
+```
+
+---
+**Zagnieżdżone struktury - podsumowanie:**
+- Elementami struktur danych mogą być inne struktury danych
+- Pozwala to przechowywać złożone dane, które mogą posiadać wiele stopniów zagnieżdżenia
+- Struktury będące połączeniem list i słowników w dowolnej konfiguracji często nazywamy JSON (*JavaScript Object Notation*)
 ---
 ---
 ---
