Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -732,7 +732,77 @@ simulation_config["humans_start_positions"][-1][0]
 ---
 &nbsp;
 ### 3.8 Wbudowane generatory cz. 1
+Generator to obiekt, który zwraca sekwencję wartości, przy czym nie trafiają one jednocześnie do pamięci. Są generowane po kolei a następnie zapominane. Mechanizm ten nazywa się *lazy evalution*. 
 
+Więcej o generatorach i tym jak możemy je tworzyć znajduje się w [[12. Pozostałe zagadnienia#12.3 Generatory|osobnym temacie]]. Jest jednak szereg wbudowanych generatorów, których możemy używać bez samodzielnego definiowania ich. Są one przydatne m.in. przy pracy ze strukturami danych.
+
+#### 3.8.1 `zip`
+Generator `zip` służy do łączenia w pary elementów z dwóch lub więcej sekwencji. Działa na podobnej zasadzie co zamek błyskawiczny:
+```python
+x_coordinates = [2, 5, 3]
+y_coordinates = [3, 6, 1]
+
+zip(x_coordinates, y_coordinates)
+```
+
+Samo wywołanie zipa zwróci mniej więcej taki wynik: `<zip at 0x7f1c15715300>`. Jeśli jednak zrzutujemy go na listę:
+```python
+list(zip(x_coordinates, y_coordinates))
+```
+Otrzymamy listę tupli będących parami elementów z list `x_coordinates` oraz `y_coordinates` czyli:
+[(6, 2), (7, 5), (8, 3)]
+
+Liczba sekwencji przekazanych do zipa może być dowolna. Jeśli sekwencje te będą miały różną liczbę elementów, `zip` zwróci listę o długości równej najkrótszej z sekwencji:
+
+```python
+list(zip((1, 2, 3), ("a", "b", "c", "d"), (10, 20)))
+```
+[(1, 'a', 10), (2, 'b', 20)]
+
+#### 3.8.2 `enumerate`
+Generator `enumerate` przyjmuje jako argument jedną sekwencję i zwraca obiekt typu `enumerate`:
+```python
+enumerate(x_coordinates)
+```
+<enumerate at 0x7fb39ca4d800>
+
+Podobnie jak w przypadku zipa, możemy zrzutować go na listę:
+```python
+list(enumerate(x_coordinates))
+```
+[(0, 2), (1, 5), (2, 3)]
+
+Otrzymujemy listę tupli - par wartości. Na każdą parę składa się indeks danego elementu wyjściowej listy oraz sam ten element.
+
+Możemy również zacząć sekwencję indeksów od innej wartości niż domyślne 0:
+```python
+list(enumerate(x_coordinates, start=6))
+```
+[(6, 2), (7, 5), (8, 3)]
+
+---
+Generatory `zip` oraz `enumerate` przydają się między innymi w [[5. Pętle|pętlach]], o których będzie później. Można je wykorzystać również na przykład do stworzenia słownika:
+
+```python
+humans_ids = [1, 2, 3, 4]
+infection_statuses = [True, False, False, False]
+
+dict(zip(humans_ids, infection_statuses))
+```
+
+{1: True, 2: False, 3: False, 4: False}
+
+```python
+dict(enumerate(infection_statuses))
+```
+{0: True, 1: False, 2: False, 3: False}
+
+---
+**Wbudowane generatory cz. 1 - podsumowanie:**
+- Generator to obiekt zwracający sekwencję wartości, które nie trafiają od razu do pamięci, tylko robią to kolejno. Mechanizm ten nazywa się *lazy evaluation*
+- `zip` to generator, który łączy w pary (lub trójki itd.) elementy dwóch (lub trzech itd.) sekwencji. Zwraca obiekt typu `zip`, który możemy zrzutować na listę tupli
+- `enumerate` to generator, który dla podanej sekwencji zwraca pary indeks-wartość w postaci obiekty typu `enumerate`. Możemy zrzutować go na listę tupli
+- Oba te generatory mogą posłużyć m.in. do utworzenia słownika a także są przydatne w [[5. Pętle|pętlach]]
 ---
 ---
 ---
