Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -737,7 +737,7 @@ Generator to obiekt, który zwraca sekwencję wartości, przy czym nie trafiają
 Więcej o generatorach i tym jak możemy je tworzyć znajduje się w [[12. Pozostałe zagadnienia#12.3 Generatory|osobnym temacie]]. Jest jednak szereg wbudowanych generatorów, których możemy używać bez samodzielnego definiowania ich. Są one przydatne m.in. przy pracy ze strukturami danych.
 
 #### 3.8.1 `zip`
-Generator `zip` służy do łączenia w pary elementów z dwóch lub więcej sekwencji. Działa na podobnej zasadzie co zamek błyskawiczny:
+Generator `zip` służy do łączenia w pary (trójki, czwórki itd.) elementów z dwóch lub więcej sekwencji. Działa na podobnej zasadzie co zamek błyskawiczny:
 ```python
 x_coordinates = [2, 5, 3]
 y_coordinates = [3, 6, 1]
@@ -745,12 +745,12 @@ y_coordinates = [3, 6, 1]
 zip(x_coordinates, y_coordinates)
 ```
 
-Samo wywołanie zipa zwróci mniej więcej taki wynik: `<zip at 0x7f1c15715300>`. Jeśli jednak zrzutujemy go na listę:
+Samo wywołanie zipa zwróci obiekty typu `zip`: `<zip at 0x7f1c15715300>`. Jeśli jednak zrzutujemy go na listę:
 ```python
 list(zip(x_coordinates, y_coordinates))
 ```
 Otrzymamy listę tupli będących parami elementów z list `x_coordinates` oraz `y_coordinates` czyli:
-[(6, 2), (7, 5), (8, 3)]
+[(2, 3), (5, 6), (3, 1)]
 
 Liczba sekwencji przekazanych do zipa może być dowolna. Jeśli sekwencje te będą miały różną liczbę elementów, `zip` zwróci listę o długości równej najkrótszej z sekwencji:
 
@@ -802,13 +802,119 @@ dict(enumerate(infection_statuses))
 - Generator to obiekt zwracający sekwencję wartości, które nie trafiają od razu do pamięci, tylko robią to kolejno. Mechanizm ten nazywa się *lazy evaluation*
 - `zip` to generator, który łączy w pary (lub trójki itd.) elementy dwóch (lub trzech itd.) sekwencji. Zwraca obiekt typu `zip`, który możemy zrzutować na listę tupli
 - `enumerate` to generator, który dla podanej sekwencji zwraca pary indeks-wartość w postaci obiekty typu `enumerate`. Możemy zrzutować go na listę tupli
-- Oba te generatory mogą posłużyć m.in. do utworzenia słownika a także są przydatne w [[5. Pętle|pętlach]]
+- Oba te generatory mogą posłużyć m.in. do utworzenia słownika a także przydają się w [[5. Pętle|pętlach]]
 ---
 ---
 ---
 &nbsp;
 ### 3.9 Mutowalność, hashowalność i kopiowanie obiektów
+#### 3.9.1 Mutowalność
+Mutowalność to zdolność obiektu do bycia zmodyfikowanym. Niektóre typy danych w Pythonie są mutowalne a inne niemutowalne. Poniżej znajduje się zestawienie z informacją o mutowalności najważniejszych typów danych.
 
+| Typ danych    | Mutowalny  |
+| ------------- | ---------- |
+| str   | Nie  |
+| int   | Nie  |
+| float | Nie  |
+| bool  | Nie  |
+| list  | Tak  |
+| tuple | Nie  |
+| dict  | Tak  |
+| set   | Tak  |
+
+Dla lepszego zrozumienia czym jest mutowalność przyda się wbudowana funkcja `id`, która zwraca adres komórki pamięci, w której przechowywany jest dany obiekt.
+
+```python
+x = True
+id(x)
+```
+94662900214784
+
+Teraz zmienimy wartość zmiennej x:
+```python
+x = False
+id(x)
+```
+94662900214752
+
+Adres komórki się zmienił. To oznacza, że zmienna x nie została zmodyfikowana a tym samym nie znajduje się dalej w tym samym miejscu pamięci. Zamiast tego została utworzona od nowa i została ulokowana w pamięci w innym miejscu. Wynika to z tego, że typ *bool* nie jest mutowalny. Podobnie działa to dla stringów, intów czy floatów ponieważ wszystkie te typy są niemutowalne. Inaczej będzie dla listy:
+```python
+z = [1, 2, 3]
+id(z)
+```
+140409403294720
+
+```python
+z.append(4)
+id(z)
+```
+140409403294720
+
+Lista jest mutowalna. Co za tym idzie, po modyfikacji jej mamy cały czas do czynienia z tym samym obiektem, więc jego adres się nie zmienia.
+
+Analogicznie do powyższych przykładów będą zachowywać się pozostałe typy mutowalne i niemutowalne, np. słowniki oraz tuple.
+
+#### 3.9.2 Hashowalność
+Funkcja hashująca to - według definicji - funkcja przyporządkowująca dowolnie dużej liczbie krótką wartość o stałym rozmiarze. Jest to tzw. skrót nieodwracalny.
+
+Abstrahując od formalnej definicji, potraktujmy funkcję *hash* jako pewne złożone przekształcenie, które w sposób zdeterminowany ale ciężki do dokładnego prześledzenia transformuje jedną wartość (liczbę) na inną liczbę.
+
+---
+> Nie ze wszystkich obiektów w Pythonie możemy wyznaczyć hash. Te obiekty, z których możemy go wyznaczyć nazywamy obiektami hashowalnymi. Pozostałe to obiekty niehashowalne.
+---
+
+Hash liczby całkowitej to sama liczba:
+```python
+hash(1)
+```
+1
+
+```python
+hash(12)
+```
+12
+
+Hash wartości logicznej *True*/*False* to 1 / 0 czyli jest taki sam jak hash liczb całkowitych 1 / 0.
+```python
+hash(True)
+```
+1
+
+Dla liczb zmiennoprzecinkowych oraz stringów funkcja wynik działania funkcji hashującej jest bardziej złożony. Wygląda na losowy, ale jest wyliczony według konkretnego algorytmu. Co do zasady hash tej samej wartości powinien być zawsze taki sam, ale w zależności od systemu / maszyny na jakich pracujemy funkcja hashująca może być różna. 
+
+```python
+hash(1.23)
+```
+530343892119149569
+
+```python
+hash("abc")
+```
+8807988060639348474
+
+```python
+hash((1, 2, 3))
+```
+529344067295497451
+
+Powyżej mamy kilka przykładów wyznaczania hasha dla obiektów niemutowalnych. Jest to zawsze możliwe, ponieważ istnieje pewna zależność między obiektami hashowalnymi i niemutowalnymi:
+
+---
+> Wszystkie niemutowalne obiekty są hashowalne. Jednak nie wszystkie obiekty hashowalne są niemutowalne. Możemy stworzyć własną [[10. Programowanie obiektowe|klasę]] obiektów, które będą mutowalne i hashowalne.
+---
+
+Listy, sety oraz dicty są mutowalne i niehashowalne. Próba wyznaczenia ich hasha skończy się niepowodzeniem. Poza tym hashowalność jest cechą istotną dla dictów i setów dlatego że:
+
+---
+> Zarówno klucze dicta jak i elementy setu muszą być niemutowalne
+---
+
+#### 3.9.3 Kopiowanie obiektów
+
+
+---
+ **podsumowanie:**
+ - ...
 ---
 ---
 ---
