Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -1,6 +1,35 @@
 ### 4.1 Operatory porównania
-...
+W celu sprawdzenia równości lub nierówności dwóch obiektów - zazwyczaj typów numerycznych - używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
 
+Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości: `==` oraz że operator sprawdzający **brak równości** to `!=`.
+
+```python
+3 > 2    # True
+4 < 1    # False
+3 <= 4   # True
+2 >= 2   # True
+-2 == 0  # False
+-2 != 0  # True
+```
+
+Istnieją również operatory: `in` - który sprawdza czy dany element występuje w sekwencji, `not` - który powoduje zaprzeczenie, `is` - który sprawdza czy dwie zmienne wskazują na ten sam obiekt. Operator `is` jest także często wykorzystywany do sprawdzenia czy dany obiekt to *None*.
+
+```python
+3 in [2, 3, 4, 5]       # True
+3 not in [2, 3, 4, 5]   # False
+
+variable = None
+variable is None        # True
+variable is not None    # False
+```
+
+**Operatory porównania - podsumowanie:**
+- Aby sprawdzić który z dwóch obiektów jest większy (lub równy) albo mniejszy (lub równy) używamy znanych z matematyki operatorów większości, mniejszości i równości
+- Aby sprawdzić równość dwóch obiektów używamy operatora `==`
+- Aby sprawdzić brak równości dwóch obiektów używamy operatora `!=`
+- Aby sprawdzić czy element występuje w sekwencji używamy operatora `in`
+- Aby sprawdzić czy dwie zmienne wskazują na ten sam obiekt lub czy zmienna to *None* używamy operatora `is`
+- W celu zaprzeczenia używamy operatora `not`
 ---
 ---
 ---
