Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -1,7 +1,7 @@
 ### 4.1 Operatory porównania
-W celu sprawdzenia równości lub nierówności dwóch obiektów - zazwyczaj typów numerycznych - używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
+W celu sprawdzenia równości lub nierówności dwóch obiektów - zazwyczaj typu numerycznego - używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
 
-Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości: `==` oraz że operator sprawdzający **brak równości** to `!=`.
+Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości: `\=\=` oraz że operator sprawdzający **brak równości** to `\!\=`.
 
 ```python
 3 > 2    # True
