Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -1,7 +1,7 @@
 ### 4.1 Operatory porównania
 W celu sprawdzenia równości lub nierówności dwóch obiektów - zazwyczaj typu numerycznego - używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
 
-Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości: `\=\=` oraz że operator sprawdzający **brak równości** to `\!\=`.
+Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości: *==* oraz że operator sprawdzający **brak równości** to *!=*.
 
 ```python
 3 > 2    # True
@@ -25,8 +25,8 @@ variable is not None    # False
 
 **Operatory porównania - podsumowanie:**
 - Aby sprawdzić który z dwóch obiektów jest większy (lub równy) albo mniejszy (lub równy) używamy znanych z matematyki operatorów większości, mniejszości i równości
-- Aby sprawdzić równość dwóch obiektów używamy operatora `==`
-- Aby sprawdzić brak równości dwóch obiektów używamy operatora `!=`
+- Aby sprawdzić równość dwóch obiektów używamy operatora *==*
+- Aby sprawdzić brak równości dwóch obiektów używamy operatora **!=**
 - Aby sprawdzić czy element występuje w sekwencji używamy operatora `in`
 - Aby sprawdzić czy dwie zmienne wskazują na ten sam obiekt lub czy zmienna to *None* używamy operatora `is`
 - W celu zaprzeczenia używamy operatora `not`
