Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -1,15 +1,15 @@
 ### 4.1 Operatory porównania
 W celu sprawdzenia równości lub nierówności dwóch obiektów - zazwyczaj typu numerycznego - używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
 
-Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości: *==* oraz że operator sprawdzający **brak równości** to *!=*.
+Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości *==* oraz że operator sprawdzający **brak równości** to *!=*.
 
 ```python
 3 > 2    # True
 4 < 1    # False
 3 <= 4   # True
 2 >= 2   # True
--2 == 0  # False
--2 != 0  # True
+-2 = = 0  # False
+-2 ! = 0  # True
 ```
 
 Istnieją również operatory: `in` - który sprawdza czy dany element występuje w sekwencji, `not` - który powoduje zaprzeczenie, `is` - który sprawdza czy dwie zmienne wskazują na ten sam obiekt. Operator `is` jest także często wykorzystywany do sprawdzenia czy dany obiekt to *None*.
