Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -6,8 +6,8 @@ Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości
 ```python
 3 > 2    # True
 4 < 1    # False
-3 <= 4   # True
-2 >= 2   # True
+3 < = 4   # True
+2 > = 2   # True
 -2 = = 0  # False
 -2 ! = 0  # True
 ```
@@ -35,8 +35,60 @@ variable is not None    # False
 ---
 &nbsp;
 ### 4.2 Spójniki logiczne
-...
+Spójniki logiczne służą do łączenia dwóch lub więcej warunków logicznych. Wyróżniamy dwa podstawowe spójniki: *and* oraz *or*. *and* oznacza że dla dwóch warunków logicznych oba muszą być prawdziwe żeby całość uznać za prawdę natomiast *or* oznacza że przynajmniej jeden musi być spełniony.
 
+```python
+true = True
+false = False
+```
+
+***and***
+```python
+true and true     # True
+true and false    # False
+false and true    # False
+false and false   # False
+```
+
+***or***
+```python
+true or true     # True
+true or false    # True
+false or true    # True
+false or false   # False
+```
+
+Oprócz tego istnieje również spójnik *xor* czyli *exclusive or*. Oznacza on, że aby warunki połączone takim spójnikiem zwróciły *True* prawdziwy musi być dokładnie jeden z nich. Aby spójnik *xor* używamy znaku `^`:
+
+```python
+true ^ true     # False
+true ^ false    # True
+false ^ true    # True
+false ^ false   # False
+```
+
+---
+Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wówczas należy pamiętać o kolejności obowiązywania spójników - pierwszeństwo ma *and* a za nim jest *or*. Oprócz tego obowiązują nawiasy, które mają pierwszeństwo również przed *and*. Poniżej kilka przykładów tego co zwrócą kombinacje warunków logicznych:
+```python
+True and True and False   # False
+True or False or False    # True
+True or True and False    # True
+(True or True) and False  # False
+False or True and False   # False
+```
+
+Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub większości możemy to zapisać korzystając z tzw. *syntactic sugar* czyli uproszczonej składni, która pozwala skrócić kod wykonujący daną czynność:
+```python
+3 > 2 > 1      # True
+3 > 10 > 1     # False
+```
+
+**Spójniki logiczne - podsumowanie:**
+- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
+- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
+- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
+- Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wtedy spójnik *and* ma pierwszeństwo przed *or*
+- Aby połączyć kilka warunków logicznych dotyczących relacji mniejszości lub większości możemy użyć kilku znaków typu <, >, <=, ... w jednej linii
 ---
 ---
 ---
