Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -94,8 +94,40 @@ Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub wi
 ---
 &nbsp;
 ### 4.3 Instrukcja if
-...
+Bardzo często zdarza się, że pewien fragment kodu chcemy wykonać tylko wtedy jeśli spełniony zostanie określony warunek logiczny. W tym celu używamy instrukcji warunkowych. Instrukcja warunkowa zaczyna się od słowa kluczowego *if* po którym znajduje się warunek logiczny. Na końcu linii nalezy postawić dwukropek a kolejna linia (linie) kodu musi być wcięta - najczęściej z użyciem 4 spacji. Cały kod, który znajduje we wciętym bloku pod linijką zawierającą `if <warunek logiczny>:` wykona się tylko wtedy jeśli warunek logiczny zwróci wartość *True*. Poniżej kilka przykładów:
 
+```python
+numbers_of_zombies = 0
+
+if numbers_of_zombies ＝＝ 0:
+    print("Symulacja skończona, wygrali ludzie")
+```
+
+```python
+list_of_humans = []
+
+if len(list_of_humans) ＝＝ 0:
+    print("Symulacja skończona, wygrali zombie")
+```
+
+```python
+human_power = 5
+zombie_power = 6
+
+if human_power < zombie_power:
+    print("Walkę wygrywa zombie")
+```
+
+```python
+if human_power > zombie_power:
+    print("Walkę wygrywa człowiek")
+```
+
+
+---
+**Instrukcja `if` - podsumowanie:**
+- Aby uzależnić wykonanie fragmentu kodu od tego czy spełniony został określony warunek logiczny używamy instrukcji warunkowych
+- Instrukcja warunkowa składa się ze słowa kluczowego `if` warunku logicznego, dwukropka oraz wciętego bloku kodu
 ---
 ---
 ---
