Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -127,14 +127,54 @@ if human_power > zombie_power:
 ---
 **Instrukcja `if` - podsumowanie:**
 - Aby uzależnić wykonanie fragmentu kodu od tego czy spełniony został określony warunek logiczny używamy instrukcji warunkowych
-- Instrukcja warunkowa składa się ze słowa kluczowego `if` warunku logicznego, dwukropka oraz wciętego bloku kodu
+- Instrukcja warunkowa składa się ze słowa kluczowego `if`, warunku logicznego, dwukropka oraz wciętego bloku kodu
 ---
 ---
 ---
 &nbsp;
 ### 4.4 Instrukcja if-else
-...
+Jeśli chcemy aby jeden blok kodu wykonał się w przypadku spełnienia warunku logicznego a inny w *przeciwnym wypadku* używamy instrukcji *if-else*. Jej składnia jest rozwinięciem składni instrukcji *if*. Po pierwszym wciętym bloku kodu należy napisać słowo kluczowe *else* (oraz dwukropek) po czym w kolejnym wciętym bloku napisać zbiór instrukcji które mają wykonać się jeśli nie zostanie spełniony warunek logiczny:
+```python
+number_of_zombies = 3
+number_of_humans = 0
 
+if number_of_zombies ＝＝ 0 or number_of_humans ＝＝ 0:
+    print("Koniec symulacji")
+else:
+    print("Symulacja trwa nadal")
+```
+
+```python
+human_experience = 3
+human_wins_battle = True
+
+if human_wins_battle:
+    human_experience += 1
+else:
+    print("Gramy dalej")
+    
+
+print(f"Wartość doświadczenia po bitwie: {human_experience}")
+```
+Wartość doświadczenia po bitwie: 4
+
+---
+```python
+x = 1
+
+if x % 2 ＝＝ 0:  # sprawdza czy liczba jest parzysta
+    x -= 1
+else:
+    x *= 2
+
+print(x)
+```
+2
+
+---
+**Instrukcja `if-else` - podsumowanie:**
+- Aby wykonać jeden z dwóch bloków kodu w zależności od tego czy określony warunek logiczny zostanie spełniony należy użyć instrukcji `if-else`
+- Każdy z bloków powinien być wcięty, słowa kluczowe `if` oraz `else` powinny być na tym samym poziomie wcięcia
 ---
 ---
 ---
