--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -180,7 +180,7 @@ print(x)
 ---
 &nbsp;
 ### 4.5 Instrukcja if-elif-(else)
-...
+Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-(else)`. 
 
 ---
 ---
