Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -180,7 +180,10 @@ print(x)
 ---
 &nbsp;
 ### 4.5 Instrukcja if-elif-(else)
-Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-(else)`. 
+Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-else`. Używamy jej wtedy kiedy chcemy wykonać jeden z wielu bloków kodu, z których każdy poprzedzony jest warunkiem logicznym. Aby dany blok kodu się wykonał, odpowiadający mu warunek logiczny musi zostać spełniony. Instrukcja `if-elif-else` składa się z następujących elementów:
+*if* - dd
+*elif* - dd
+*else* - dd
 
 ---
 ---
